[api] - added register forms