@@ -1,8 +1,6 @@
 package com.example.mazebank.Core.Security;
 
-import com.example.mazebank.Core.Models.Model;
 import com.example.mazebank.Core.Models.UserLoggedIn;
-import com.example.mazebank.Core.Users.User;
 import com.google.zxing.BarcodeFormat;
 import com.google.zxing.MultiFormatWriter;
 import com.google.zxing.WriterException;
@@ -16,6 +14,7 @@ import org.apache.commons.codec.binary.Hex;
 
 import java.io.*;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.SecureRandom;
 import java.time.Duration;
 import java.time.LocalDateTime;
@@ -24,7 +23,6 @@ public class Security {
     private static Security instance;
 
     private Pair<String, String> authCodes = new Pair<>("", "");
-    private Boolean FA_Permision = false;
     private Boolean FA_Enabled = false;
     private boolean FA_Verified = false;
     private String FA_Key = "";
@@ -67,7 +65,7 @@ public class Security {
     public void setFA_Verification_Time(LocalDateTime FA_Verification_Time) {
         this.FA_Verification_Time = FA_Verification_Time;
     }
-    public Security() throws IOException, WriterException {
+    public Security() {
     }
 
     public static synchronized Security getInstance() throws IOException, WriterException {
@@ -103,17 +101,13 @@ public class Security {
         return TOTP.getOTP(hexKey);
     }
 
-    public void verifyQRCode() throws IOException, WriterException {
-
-    }
-
     public void startSecurityThread(String secretKey) throws IOException, WriterException {
         Thread securityThread = new Thread(() -> {
             String lastCode = null;
             while (true) {
                 String code = Security.getTOTPCode(secretKey);
                 if (!code.equals(lastCode)) {
-                    System.out.println("[LOG][Google Auth] - Key: " + secretKey + "Code: " + code);
+                    System.out.println("[LOG][Google Auth] - Key: " + secretKey + " Code: " + code);
                 }
                 lastCode = code;
                 try {
@@ -122,7 +116,6 @@ public class Security {
                     System.out.println("[LOG] - " + e.getMessage());
                     break;
                 }
-                ;
             }
         });
         securityThread.setDaemon(true);
@@ -142,21 +135,17 @@ public class Security {
     }
 
     private static String getGoogleAuthenticatorBarCode(String secretKey, String account, String issuer) {
-        try {
-            return "otpauth://totp/"
-                    + URLEncoder.encode(issuer + ":" + account, "UTF-8").replace("+", "%20")
-                    + "?secret=" + URLEncoder.encode(secretKey, "UTF-8").replace("+", "%20")
-                    + "&issuer=" + URLEncoder.encode(issuer, "UTF-8").replace("+", "%20");
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalStateException(e);
-        }
+        return "otpauth://totp/"
+                + URLEncoder.encode(issuer + ":" + account, StandardCharsets.UTF_8).replace("+", "%20")
+                + "?secret=" + URLEncoder.encode(secretKey, StandardCharsets.UTF_8).replace("+", "%20")
+                + "&issuer=" + URLEncoder.encode(issuer, StandardCharsets.UTF_8).replace("+", "%20");
     }
 
     public Pair<String, String> getAuthCodes() {
         return authCodes;
     }
 
-    public void setAuthCodes(String secretKey) throws IOException, WriterException {
+    public void setAuthCodes(String secretKey) {
         String email = UserLoggedIn.getInstance().getLoggedInUser().getEmail();
         String companyName = "Maze Bank";
         String barCodeUrl = Security.getGoogleAuthenticatorBarCode(secretKey, email, companyName);
@@ -169,13 +158,5 @@ public class Security {
         String companyName = "Maze Bank";
         String barCodeUrl = Security.getGoogleAuthenticatorBarCode(secretKey, email, companyName);
         authCodes = new Pair<>(secretKey, barCodeUrl);
-    }
-
-    public Boolean getFA_Permision() {
-        return FA_Permision;
-    }
-
-    public void setFA_Permision(Boolean FA_Permision) {
-        this.FA_Permision = FA_Permision;
     }
 }
